# agentlens

./: .env.example  .gitignore  CHANGELOG.md  README.md  architecture.md  dashboard.css  hello-report.html  pyproject.toml  report.html  test_cache.py  test_db.py  test_flag_regression.py  test_judge.py  test_pipeline.py  test_regression.py  test_sdk.py  test_trace.py
.github/workflows/: agentlens.yml  publish.yml
baselines/: scenario_01.json
examples/toy_agent_a/scenarios/: scenario_01.yaml
examples/toy_agent_b/scenarios/: scenario_01.yaml
rubrics/: default.yaml
scenarios/: scenario_01.yaml  scenario_02.yaml  scenario_03.yaml  scenario_04.yaml  scenario_05.yaml  scenario_broken.yaml
scripts/: latest_run.py  migrate_jsonl.py
src/agentlens/: __init__.py  cli.py  cli_report.py  demo_agent.py  logging_config.py  models.py  sdk.py  store.py
src/agentlens/dashboard/: __init__.py  app.py  export.py  templates.py
src/agentlens/dashboard/templates/: report.html.j2
src/agentlens/evaluator/: __init__.py  baseline.py  pipeline.py  regression.py  report.py  rules.py
src/agentlens/judge/: __init__.py  deepseek.py  rubric.py
tests/: test_async.py  test_budget.py  test_loops.py  test_query.py  test_report.py  test_rules.py  test_schema.py  test_sdk.py  test_store.py
