[project]
name = "agentlens"
dynamic = ["version"]

description = "Framework-agnostic evaluation and observability for multi-agent LLM systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Rohith" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.11",
    "typing-extensions>=4.12",
    "python-dotenv>=1.1",
    "click>=8.1",
    "pytest>=8.4",
    "openai>=1.99.0",
    "pyyaml>=6.0",
    "tenacity>=9.0.0",
    "fastapi",
    "uvicorn",
    "jinja2",
    "rich",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "agentlens._version.__version__" }

[project.scripts]
agentlens = "agentlens.cli:cli"